// proto/v1/common/common.proto
syntax = "proto3";

package market.common.v1;
option go_package = "github.com/YaganovValera/analytics-system/proto/gen/go/v1/common;commonpb";

// Pagination parameters for paginated API responses.
message Pagination {
  int32 page_size = 1;
  string page_token = 2;
}

// Metadata provided with every request for observability and tracing.
message RequestMetadata {
  string ip_address = 1;
  string user_agent = 2;
  string trace_id = 3;
}

// Supported aggregation intervals for analytics queries.
enum AggregationInterval {
  // Do not use. Must be explicitly set by client.
  AGG_INTERVAL_UNSPECIFIED = 0;
  // 1-minute OHLCV interval
  AGG_INTERVAL_1_MINUTE = 1;
  // 5-minute OHLCV interval
  AGG_INTERVAL_5_MINUTES = 2;
  // 15-minute OHLCV interval
  AGG_INTERVAL_15_MINUTES = 3;
  // 1-hour OHLCV interval
  AGG_INTERVAL_1_HOUR = 4;
  // 4-hour OHLCV interval
  AGG_INTERVAL_4_HOURS = 5;
  // 1-day OHLCV interval
  AGG_INTERVAL_1_DAY = 6;
}


// Request to retrieve a paginated list of available market symbols.
message ListSymbolsRequest {
  Pagination pagination = 1;
  RequestMetadata metadata = 2;
}

// Response containing available market symbols.
message ListSymbolsResponse {
  repeated string symbols = 1;
  string next_page_token = 2;
}

service CommonService {
  rpc ListSymbols(ListSymbolsRequest) returns (ListSymbolsResponse);
}
